--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -462,50 +462,59 @@ filter {
   # - TODO: destination.mac -> destination.device
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
+  #
+  # Enrich zeek conn.log and all non-zeek data sources
+  # TODO: is that what we want? want to avoid storing way more often than needed
 
-  if ([source][ip]) and
-     (([network][direction] == "internal") or ([network][direction] == "outbound")) {
-    ruby {
-      id => "ruby_netbox_enrich_source_ip_device"
-      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
-      script_params => {
-        "source" => "[source][ip]"
-        "target" => "[source][device][name]"
-        "lookup_type" => "ip_device"
-        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+  if (([event][provider] != "zeek") or ([event][dataset] == "conn")) {
+    if ([source][ip]) and
+       (([network][direction] == "internal") or ([network][direction] == "outbound")) {
+      ruby {
+        id => "ruby_netbox_enrich_source_ip_device"
+        path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+        script_params => {
+          "source" => "[source][ip]"
+          "target" => "[source][device]"
+          "lookup_type" => "ip_device"
+          "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
+          "netbox_token_env" => "SUPERUSER_API_TOKEN"
+        }
+      }
+      ruby {
+        id => "ruby_netbox_enrich_source_ip_segment"
+        path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+        script_params => {
+          "source" => "[source][ip]"
+          "target" => "[source][segment]"
+          "lookup_type" => "ip_vrf"
+          "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
+          "netbox_token_env" => "SUPERUSER_API_TOKEN"
+        }
       }
     }
-    ruby {
-      id => "ruby_netbox_enrich_source_ip_segment"
-      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
-      script_params => {
-        "source" => "[source][ip]"
-        "target" => "[source][segment][name]"
-        "lookup_type" => "ip_vrf"
-        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+    if ([destination][ip]) and
+       (([network][direction] == "internal") or ([network][direction] == "inbound")) {
+      ruby {
+        id => "ruby_netbox_enrich_destination_ip_device"
+        path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+        script_params => {
+          "source" => "[destination][ip]"
+          "target" => "[destination][device]"
+          "lookup_type" => "ip_device"
+          "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
+          "netbox_token_env" => "SUPERUSER_API_TOKEN"
+        }
       }
-    }
-  }
-  if ([destination][ip]) and
-     (([network][direction] == "internal") or ([network][direction] == "inbound")) {
-    ruby {
-      id => "ruby_netbox_enrich_destination_ip_device"
-      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
-      script_params => {
-        "source" => "[destination][ip]"
-        "target" => "[destination][device][name]"
-        "lookup_type" => "ip_device"
-        "netbox_token_env" => "SUPERUSER_API_TOKEN"
-      }
-    }
-    ruby {
-      id => "ruby_netbox_enrich_destination_ip_segment"
-      path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
-      script_params => {
-        "source" => "[destination][ip]"
-        "target" => "[destination][segment][name]"
-        "lookup_type" => "ip_vrf"
-        "netbox_token_env" => "SUPERUSER_API_TOKEN"
+      ruby {
+        id => "ruby_netbox_enrich_destination_ip_segment"
+        path => "/usr/share/logstash/malcolm-ruby/netbox_enrich.rb"
+        script_params => {
+          "source" => "[destination][ip]"
+          "target" => "[destination][segment]"
+          "lookup_type" => "ip_vrf"
+          "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
+          "netbox_token_env" => "SUPERUSER_API_TOKEN"
+        }
       }
     }
   }
