--- a/logstash/pipelines/enrichment/17_segment_comparison.conf
+++ b/logstash/pipelines/enrichment/17_segment_comparison.conf
@@ -1,10 +1,14 @@
 filter {
 
-  if ([destination][segment][name] and [source][segment][name]) and
-     ([destination][segment][name] != [source][segment][name]) {
-    mutate {
-      id => "mutate_add_tag_cross_segment"
-      add_tag => [ "cross_segment" ]
+  if [destination][segment][id] and [source][segment][id] {
+    if ([destination][segment][id] != [source][segment][id]) {
+      mutate { id => "mutate_add_tag_cross_segment_id"
+               add_tag => [ "cross_segment" ] }
+    }
+  } else if [destination][segment][name] and [source][segment][name] {
+    if ([destination][segment][name] != [source][segment][name]) {
+      mutate { id => "mutate_add_tag_cross_segment_name"
+               add_tag => [ "cross_segment" ] }
     }
   }
 
