unique-ify network.name

--- a/logstash/pipelines/enrichment/96_make_unique.conf
+++ b/logstash/pipelines/enrichment/96_make_unique.conf
@@ -146,6 +146,17 @@ filter {
     }
   }
 
+  # network protocol number #################################################
+  if ([network][name]) {
+    ruby {
+      id => "ruby_network_name_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[network][name]"
+      }
+    }
+  }
+
   # action and result #########################################################
   if ([event][action]) {
     ruby {
