a bunch of work for idaholab/Malcolm#132, enriching network traffic metatata from netbox

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -85,15 +85,20 @@ host.name=db:host.name;group:malcolm;kind:termfield;friendly:Malcolm Node;help:M
 # basic connection information
 destination.geo.city_name=db:destination.geo.city_name;group:malcolm;kind:termfield;friendly:Responding GeoIP City;help:Responding GeoIP City
 destination.geo.country_name=db:destination.geo.country_name;group:malcolm;kind:termfield;friendly:Responding GeoIP Country;help:Responding GeoIP Country
-destination.device.display=db:destination.device.display;group:malcolm;kind:termfield;friendly:Responding Device;help:Responding Device
+destination.device.cluster=db:destination.device.cluster;group:malcolm;kind:termfield;friendly:Responding Device Cluster;help:Responding Device Cluster
+destination.device.device_type=db:destination.device.device_type;group:malcolm;kind:termfield;friendly:Responding Device Type;help:Responding Device Type
 destination.device.id=db:destination.device.id;group:malcolm;kind:integer;friendly:Responding Device ID;help:Responding Device ID
+destination.device.manufacturer=db:destination.device.manufacturer;group:malcolm;kind:termfield;friendly:Responding Device Manufacturer;help:Responding Device Manufacturer
 destination.device.name=db:destination.device.name;group:malcolm;kind:termfield;friendly:Responding Device Name;help:Responding Device Name
+destination.device.role=db:destination.device.role;group:malcolm;kind:termfield;friendly:Responding Device Role;help:Responding Device Role
+destination.device.site=db:destination.device.site;group:malcolm;kind:termfield;friendly:Responding Device Site;help:Responding Device Site
 destination.device.url=db:destination.device.url;group:malcolm;kind:termfield;friendly:Responding Device URL;help:Responding Device URL
 destination.ip_reverse_dns=db:destination.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
 destination.oui=db:destination.oui;group:malcolm;kind:termfield;friendly:Responding OUI;help:Responding OUI
-destination.segment.display=db:destination.segment.display;group:malcolm;kind:termfield;friendly:Responding Network Segment;help:Responding Network Segment
 destination.segment.id=db:destination.segment.id;group:malcolm;kind:integer;friendly:Responding Network Segment ID;help:Responding Network Segment ID
 destination.segment.name=db:destination.segment.name;group:malcolm;kind:termfield;friendly:Responding Network Segment Name;help:Responding Network Segment Name
+destination.segment.site=db:destination.segment.site;group:malcolm;kind:termfield;friendly:Responding Network Segment Site;help:Responding Network Segment Site
+destination.segment.tenant=db:destination.segment.tenant;group:malcolm;kind:termfield;friendly:Responding Network Segment Tenant;help:Responding Network Segment Tenant
 destination.segment.url=db:destination.segment.url;group:malcolm;kind:termfield;friendly:Responding Network Segment URL;help:Responding Network Segment URL
 event.action=db:event.action;group:malcolm;kind:termfield;friendly:Action;help:Action
 event.freq_score_v1=db:event.freq_score_v1;group:malcolm;kind:float;friendly:Freq Score v1;help:Freq Score v1
@@ -118,17 +123,22 @@ related.password=db:related.password;group:malcolm;kind:termfield;friendly:Passw
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
-source.device.display=db:source.device.display;group:malcolm;kind:termfield;friendly:Originating Device;help:Originating Device
+source.device.cluster=db:source.device.cluster;group:malcolm;kind:termfield;friendly:Originating Device Cluster;help:Originating Device Cluster
+source.device.device_type=db:source.device.device_type;group:malcolm;kind:termfield;friendly:Originating Device Type;help:Originating Device Type
 source.device.id=db:source.device.id;group:malcolm;kind:integer;friendly:Originating Device ID;help:Originating Device ID
+source.device.manufacturer=db:source.device.manufacturer;group:malcolm;kind:termfield;friendly:Originating Device Manufacturer;help:Originating Device Manufacturer
 source.device.name=db:source.device.name;group:malcolm;kind:termfield;friendly:Originating Device Name;help:Originating Device Name
+source.device.role=db:source.device.role;group:malcolm;kind:termfield;friendly:Originating Device Role;help:Originating Device Role
+source.device.site=db:source.device.site;group:malcolm;kind:termfield;friendly:Originating Device Site;help:Originating Device Site
 source.device.url=db:source.device.url;group:malcolm;kind:termfield;friendly:Originating Device URL;help:Originating Device URL
 source.ip_reverse_dns=db:source.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
 source.nat.ip=db:source.nat.ip;group:malcolm;kind:termfield;friendly:NAT IP;help:NAT IP
 source.nat.port=db:source.nat.port;group:malcolm;kind:integer;friendly:NAT Port;help:NAT Port
 source.oui=db:source.oui;kind:termfield;group:malcolm;friendly:Originating OUI;help:Originating OUI
-source.segment.display=db:source.segment.display;group:malcolm;kind:termfield;friendly:Originating Network Segment;help:Originating Network Segment
 source.segment.id=db:source.segment.id;group:malcolm;kind:integer;friendly:Originating Network Segment ID;help:Originating Network Segment ID
 source.segment.name=db:source.segment.name;group:malcolm;kind:termfield;friendly:Originating Network Segment Name;help:Originating Network Segment Name
+source.segment.site=db:source.segment.site;group:malcolm;kind:termfield;friendly:Originating Network Segment Site;help:Originating Network Segment Site
+source.segment.tenant=db:source.segment.tenant;group:malcolm;kind:termfield;friendly:Originating Network Segment Tenant;help:Originating Network Segment Tenant
 source.segment.url=db:source.segment.url;group:malcolm;kind:termfield;friendly:Originating Network Segment URL;help:Originating Network Segment URL
 user_agent.original=db:user_agent.original;group:malcolm;kind:termfield;friendly:User Agent;help:User Agent
 url.original=db:url.original;group:malcolm;kind:termfield;friendly:URL;help:URL
@@ -2236,3 +2246,7 @@ suricata_tcp=require:suricata.tcp;title:Suricata TCP;fields:suricata.tcp.ack,sur
 suricata_tftp=require:suricata.tftp;title:Suricata TFTP;fields:suricata.tftp.file,suricata.tftp.mode,suricata.tftp.packet
 suricata_tls=require:suricata.tls;title:Suricata TLS;fields:suricata.tls.fingerprint,suricata.tls.from_proto,suricata.tls.issuerdn,suricata.tls.notafter,suricata.tls.notbefore,suricata.tls.serial,suricata.tls.session_resumed,suricata.tls.sni,suricata.tls.subject,suricata.tls.version
 suricata_tunnel=require:suricata.tunnel;title:Suricata Tunnel;fields:suricata.tunnel.depth,suricata.tunnel.dest_ip,suricata.tunnel.dest_port,suricata.tunnel.proto,suricata.tunnel.src_ip,suricata.tunnel.src_port
+netbox_source_device=require:source.device.id;title:NetBox Device (Originator);fields:source.device.cluster,source.device.device_type,source.device.id,source.device.manufacturer,source.device.name,source.device.role,source.device.site,source.device.url
+netbox_destination_device=require:destination.device.id;title:NetBox Device (Responder);fields:destination.device.cluster,destination.device.device_type,destination.device.id,destination.device.manufacturer,destination.device.name,destination.device.role,destination.device.site,destination.device.url
+netbox_source_segment=require:source.segment.id;title:NetBox Segment (Originator);fields:source.segment.id,source.segment.name,source.segment.site,source.segment.tenant,source.segment.url
+netbox_destination_segment=require:destination.segment.id;title:NetBox Segment (Responder);fields:destination.segment.id,destination.segment.name,destination.segment.site,destination.segment.tenant,destination.segment.url
