don't attempt to insert hashes with empty keys for TDS_RPC

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -6435,7 +6435,7 @@ filter {
             key,value = a.split(/\s*=\s*/)
             hash[key.to_s.delete_prefix('@')] = value
           end
-          event.set('[zeek][tds_rpc][parameters]', parameterHash)"
+          event.set('[zeek][tds_rpc][parameters]', parameterHash.reject{|k,v| k.nil? || v.nil? || k.empty? || v.empty?})"
       }
 
       mutate { id => "mutate_split_field_tds_rpc_parameter"
