do netbox enrichment on non-zeek logs and zeek conn.log and known_*.log

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -466,7 +466,7 @@ filter {
   # Enrich zeek conn.log and all non-zeek data sources
   # TODO: is that what we want? want to avoid storing way more often than needed
 
-  if (([event][provider] != "zeek") or ([event][dataset] == "conn")) {
+  if (([event][provider] != "zeek") or ([event][dataset] == "conn") or ([event][dataset] =~ /^known/)) {
     if ([source][ip]) and
        (([network][direction] == "internal") or ([network][direction] == "outbound")) {
       ruby {
