netbox enrichment work in progress

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -121,6 +121,11 @@ related.oui=db:related.oui;group:malcolm;kind:termfield;friendly:Related OUI;hel
 related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
 related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
+related.site=db:related.site;group:malcolm:kind:termfield;friendly:Related Site;help:Related Site
+related.segment=db:related.segment;group:malcolm:kind:termfield;friendly:Related Segment;help:Related Segment
+related.role=db:related.role;group:malcolm:kind:termfield;friendly:Related Role;help:Related Role
+related.manufacturer=db:related.manufacturer;group:malcolm:kind:termfield;friendly:Related Manufacturer;help:Related Manufacturer
+related.device_type=db:related.device_type;group:malcolm:kind:termfield;friendly:Related Device type;help:Related Device type
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
 source.device.cluster=db:source.device.cluster;group:malcolm;kind:termfield;friendly:Originating Device Cluster;help:Originating Device Cluster
