--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -463,8 +463,7 @@ filter {
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
   #
-  # Enrich zeek conn.log and all non-zeek data sources
-  # TODO: is that what we want? want to avoid storing way more often than needed
+  # Enrich zeek conn.log, known*.log and all non-zeek data sources
 
   if (([event][provider] != "zeek") or ([event][dataset] == "conn") or ([event][dataset] =~ /^known/)) {
     if ([source][ip]) and
@@ -518,6 +517,32 @@ filter {
       }
     }
   }
+
+  # collect site, segment, role, manufacturer and device_type in related
+  if ([source][device][site])              { mutate { id => "mutate_merge_source_device_site_related"
+                                                       merge => { "[related][site]" => "[source][device][site]" } } }
+  if ([destination][device][site])         { mutate { id => "mutate_merge_destination_device_site_related"
+                                                      merge => { "[related][site]" => "[destination][device][site]" } } }
+  if ([source][segment][site])             { mutate { id => "mutate_merge_source_segment_site_related"
+                                                      merge => { "[related][site]" => "[source][segment][site]" } } }
+  if ([destination][segment][site])        { mutate { id => "mutate_merge_destination_segment_site_related"
+                                                      merge => { "[related][site]" => "[destination][segment][site]" } } }
+  if ([source][segment][name])             { mutate { id => "mutate_merge_source_segment_name_related"
+                                                      merge => { "[related][segment]" => "[source][segment][name]" } } }
+  if ([destination][segment][name])        { mutate { id => "mutate_merge_destination_segment_name_related"
+                                                      merge => { "[related][segment]" => "[destination][segment][name]" } } }
+  if ([source][device][role])              { mutate { id => "mutate_merge_source_device_role_related"
+                                                      merge => { "[related][role]" => "[source][device][role]" } } }
+  if ([destination][device][role])         { mutate { id => "mutate_merge_destination_device_role_related"
+                                                      merge => { "[related][role]" => "[destination][device][role]" } } }
+  if ([source][device][manufacturer])      { mutate { id => "mutate_merge_source_device_manufacturer_related"
+                                                     merge => { "[related][manufacturer]" => "[source][device][manufacturer]" } } }
+  if ([destination][device][manufacturer]) { mutate { id => "mutate_merge_destination_device_manufacturer_related"
+                                                      merge => { "[related][manufacturer]" => "[destination][device][manufacturer]" } } }
+  if ([source][device][device_type])       { mutate { id => "mutate_merge_source_device_type_related"
+                                                      merge => { "[related][device_type]" => "[source][device][device_type]" } } }
+  if ([destination][device][device_type])  { mutate { id => "mutate_merge_destination_device_type_related"
+                                                      merge => { "[related][device_type]" => "[destination][device][device_type]" } } }
 
   ################################################################################################
 
