--- a/logstash/pipelines/enrichment/96_make_unique.conf
+++ b/logstash/pipelines/enrichment/96_make_unique.conf
@@ -61,6 +61,53 @@ filter {
     }
   }
 
+  # all netbox lookups ########################################################
+  if ([related][site]) {
+    ruby {
+      id => "ruby_related_site_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][site]"
+      }
+    }
+  }
+  if ([related][segment]) {
+    ruby {
+      id => "ruby_related_segment_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][segment]"
+      }
+    }
+  }
+  if ([related][role]) {
+    ruby {
+      id => "ruby_related_role_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][role]"
+      }
+    }
+  }
+  if ([related][manufacturer]) {
+    ruby {
+      id => "ruby_related_manufacturer_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][manufacturer]"
+      }
+    }
+  }
+  if ([related][device_type]) {
+    ruby {
+      id => "ruby_related_device_type_uniq"
+      path => "/usr/share/logstash/malcolm-ruby/make_unique_array.rb"
+      script_params => {
+        "field" => "[related][device_type]"
+      }
+    }
+  }
+
   # all users #################################################################
   if ([related][user]) {
     ruby {
