enrich device.service for idaholab/Malcolm#132, enriching network traffic metatata from netbox

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -91,6 +91,7 @@ destination.device.id=db:destination.device.id;group:malcolm;kind:integer;friend
 destination.device.manufacturer=db:destination.device.manufacturer;group:malcolm;kind:termfield;friendly:Responding Device Manufacturer;help:Responding Device Manufacturer
 destination.device.name=db:destination.device.name;group:malcolm;kind:termfield;friendly:Responding Device Name;help:Responding Device Name
 destination.device.role=db:destination.device.role;group:malcolm;kind:termfield;friendly:Responding Device Role;help:Responding Device Role
+destination.device.service=db:destination.device.service;group:malcolm;kind:termfield;friendly:Responding Device Service;help:Responding Device Service
 destination.device.site=db:destination.device.site;group:malcolm;kind:termfield;friendly:Responding Device Site;help:Responding Device Site
 destination.device.url=db:destination.device.url;group:malcolm;kind:termfield;friendly:Responding Device URL;help:Responding Device URL
 destination.ip_reverse_dns=db:destination.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Responding IP Reverse DNS;help:Responding IP Reverse DNS
@@ -121,6 +122,7 @@ related.oui=db:related.oui;group:malcolm;kind:termfield;friendly:Related OUI;hel
 related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
 related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
+related.service=db:related.service;group:malcolm:kind:termfield;friendly:Related Service;help:Related Service
 related.site=db:related.site;group:malcolm:kind:termfield;friendly:Related Site;help:Related Site
 related.segment=db:related.segment;group:malcolm:kind:termfield;friendly:Related Segment;help:Related Segment
 related.role=db:related.role;group:malcolm:kind:termfield;friendly:Related Role;help:Related Role
@@ -134,6 +136,7 @@ source.device.id=db:source.device.id;group:malcolm;kind:integer;friendly:Origina
 source.device.manufacturer=db:source.device.manufacturer;group:malcolm;kind:termfield;friendly:Originating Device Manufacturer;help:Originating Device Manufacturer
 source.device.name=db:source.device.name;group:malcolm;kind:termfield;friendly:Originating Device Name;help:Originating Device Name
 source.device.role=db:source.device.role;group:malcolm;kind:termfield;friendly:Originating Device Role;help:Originating Device Role
+source.device.service=db:source.device.service;group:malcolm;kind:termfield;friendly:Originating Device Service;help:Originating Device Service
 source.device.site=db:source.device.site;group:malcolm;kind:termfield;friendly:Originating Device Site;help:Originating Device Site
 source.device.url=db:source.device.url;group:malcolm;kind:termfield;friendly:Originating Device URL;help:Originating Device URL
 source.ip_reverse_dns=db:source.ip_reverse_dns;group:malcolm;kind:termfield;friendly:Originating IP Reverse DNS;help:Originating IP Reverse DNS
@@ -2251,7 +2254,7 @@ suricata_tcp=require:suricata.tcp;title:Suricata TCP;fields:suricata.tcp.ack,sur
 suricata_tftp=require:suricata.tftp;title:Suricata TFTP;fields:suricata.tftp.file,suricata.tftp.mode,suricata.tftp.packet
 suricata_tls=require:suricata.tls;title:Suricata TLS;fields:suricata.tls.fingerprint,suricata.tls.from_proto,suricata.tls.issuerdn,suricata.tls.notafter,suricata.tls.notbefore,suricata.tls.serial,suricata.tls.session_resumed,suricata.tls.sni,suricata.tls.subject,suricata.tls.version
 suricata_tunnel=require:suricata.tunnel;title:Suricata Tunnel;fields:suricata.tunnel.depth,suricata.tunnel.dest_ip,suricata.tunnel.dest_port,suricata.tunnel.proto,suricata.tunnel.src_ip,suricata.tunnel.src_port
-netbox_source_device=require:source.device.id;title:NetBox Device (Originator);fields:source.device.cluster,source.device.device_type,source.device.id,source.device.manufacturer,source.device.name,source.device.role,source.device.site,source.device.url
-netbox_destination_device=require:destination.device.id;title:NetBox Device (Responder);fields:destination.device.cluster,destination.device.device_type,destination.device.id,destination.device.manufacturer,destination.device.name,destination.device.role,destination.device.site,destination.device.url
+netbox_source_device=require:source.device.id;title:NetBox Device (Originator);fields:source.device.cluster,source.device.device_type,source.device.id,source.device.manufacturer,source.device.name,source.device.role,source.device.service,source.device.site,source.device.url
+netbox_destination_device=require:destination.device.id;title:NetBox Device (Responder);fields:destination.device.cluster,destination.device.device_type,destination.device.id,destination.device.manufacturer,destination.device.name,destination.device.role,destination.device.service,destination.device.site,destination.device.url
 netbox_source_segment=require:source.segment.id;title:NetBox Segment (Originator);fields:source.segment.id,source.segment.name,source.segment.site,source.segment.tenant,source.segment.url
 netbox_destination_segment=require:destination.segment.id;title:NetBox Segment (Responder);fields:destination.segment.id,destination.segment.name,destination.segment.site,destination.segment.tenant,destination.segment.url
