--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -500,6 +500,8 @@ filter {
           "source" => "[destination][ip]"
           "target" => "[destination][device]"
           "lookup_type" => "ip_device"
+          "lookup_service" => "true"
+          "lookup_service_port_source" => "[destination][port]"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
         }
@@ -543,6 +545,10 @@ filter {
                                                       merge => { "[related][device_type]" => "[source][device][device_type]" } } }
   if ([destination][device][device_type])  { mutate { id => "mutate_merge_destination_device_type_related"
                                                       merge => { "[related][device_type]" => "[destination][device][device_type]" } } }
+  if ([source][device][service])           { mutate { id => "mutate_merge_source_service_related"
+                                                      merge => { "[related][service]" => "[source][device][service]" } } }
+  if ([destination][device][service])      { mutate { id => "mutate_merge_destination_service_related"
+                                                      merge => { "[related][service]" => "[destination][device][service]" } } }
 
   ################################################################################################
 
