enrich device.service for idaholab/Malcolm#132, enriching network traffic metatata from netbox

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -500,7 +500,7 @@ filter {
           "source" => "[destination][ip]"
           "target" => "[destination][device]"
           "lookup_type" => "ip_device"
-          "lookup_service" => "true"
+          "lookup_service_env" => "LOGSTASH_NETBOX_ENRICHMENT_LOOKUP_SERVICE"
           "lookup_service_port_source" => "[destination][port]"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
