enrich device.service for idaholab/Malcolm#132, enriching network traffic metatata from netbox

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -475,6 +475,7 @@ filter {
           "source" => "[source][ip]"
           "target" => "[source][device]"
           "lookup_type" => "ip_device"
+          "lookup_service" => "false"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
         }
