for idaholab/Malcolm#132, use site name for enrichment lookups

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -269,7 +269,8 @@ x-filebeat-variables: &filebeat-variables
 x-netbox-variables: &netbox-variables
   # Parameters related to NetBox (and supporting tools). Note that other more specific parameters
   #   can also be configured in the env_file files for netbox* services
-  # The name of the default "site" to be created upon NetBox initialization
+  # The name of the default "site" to be created upon NetBox initialization, and to be queried
+  #   for enrichment (see LOGSTASH_NETBOX_ENRICHMENT)
   NETBOX_DEFAULT_SITE : 'Malcolm'
   # Whether to disable Malcolm's NetBox instance ('true') or not ('false')
   NETBOX_DISABLED : &netboxdisabled 'true'
@@ -483,6 +484,7 @@ services:
       << : *process-variables
       << : *ssl-variables
       << : *opensearch-variables
+      << : *netbox-variables
       << : *logstash-variables
       << : *common-beats-variables
       << : *common-lookup-variables
