--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -463,9 +463,13 @@ filter {
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
   #
-  # Enrich zeek conn.log, known*.log and all non-zeek data sources
+  # Enrich zeek conn.log, notice.log, signatures.log, known*.log and all non-zeek data sources
 
-  if (([event][provider] != "zeek") or ([event][dataset] == "conn") or ([event][dataset] =~ /^known/)) {
+  if (([event][provider] != "zeek") or
+      ([event][dataset] == "conn") or
+      ([event][dataset] == "notice") or
+      ([event][dataset] == "signatures") or
+      ([event][dataset] =~ /^known/)) {
     if ([source][ip]) and
        (([network][direction] == "internal") or ([network][direction] == "outbound")) {
       ruby {
@@ -475,6 +479,7 @@ filter {
           "source" => "[source][ip]"
           "target" => "[source][device]"
           "lookup_type" => "ip_device"
+          "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "lookup_service" => "false"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
@@ -487,6 +492,7 @@ filter {
           "source" => "[source][ip]"
           "target" => "[source][segment]"
           "lookup_type" => "ip_vrf"
+          "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
         }
@@ -501,6 +507,7 @@ filter {
           "source" => "[destination][ip]"
           "target" => "[destination][device]"
           "lookup_type" => "ip_device"
+          "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "lookup_service_env" => "LOGSTASH_NETBOX_ENRICHMENT_LOOKUP_SERVICE"
           "lookup_service_port_source" => "[destination][port]"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
@@ -514,6 +521,7 @@ filter {
           "source" => "[destination][ip]"
           "target" => "[destination][segment]"
           "lookup_type" => "ip_vrf"
+          "lookup_site_env" => "NETBOX_DEFAULT_SITE"
           "verbose_env" => "LOGSTASH_NETBOX_ENRICHMENT_VERBOSE"
           "netbox_token_env" => "SUPERUSER_API_TOKEN"
         }
