--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -463,11 +463,12 @@ filter {
   # The LOGSTASH_NETBOX_ENRICHMENT environment variable is checked inside netbox_enrich.rb
   #   and will short-circuit unles this feature is enabled.
   #
-  # Enrich zeek conn.log, notice.log, signatures.log, known*.log and all non-zeek data sources
+  # Enrich zeek conn.log, notice.log, weird.log, signatures.log, known*.log and all non-zeek data sources
 
   if (([event][provider] != "zeek") or
       ([event][dataset] == "conn") or
       ([event][dataset] == "notice") or
+      ([event][dataset] == "weird") or
       ([event][dataset] == "signatures") or
       ([event][dataset] =~ /^known/)) {
     if ([source][ip]) and
