Fixes for showing related netbox fields

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -115,19 +115,19 @@ network.protocol=db:network.protocol;group:malcolm;kind:termfield;friendly:Servi
 network.protocol_version=db:network.protocol_version;group:malcolm;kind:termfield;friendly:Service Version;help:Service Version
 network.transport=db:network.transport;group:malcolm;kind:lotermfield;friendly:Protocol;help:Protocol
 network.vlan.id=db:network.vlan.id;group:malcolm;kind:integer;friendly:VLAN ID;help:VLAN ID
+related.device_type=db:related.device_type;group:malcolm;kind:termfield;friendly:Related Device Type;help:Related Device Type
 related.hash=db:related.hash;group:malcolm;kind:termfield;friendly:Related Hash;help:Related Hash
+related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
 related.ip=db:related.ip;group:malcolm;kind:termfield;friendly:Related IP;help:Related IP
 related.mac=db:related.mac;group:malcolm;kind:termfield;friendly:Related MAC;help:Related MAC
+related.manufacturer=db:related.manufacturer;group:malcolm;kind:termfield;friendly:Related Manufacturer;help:Related Manufacturer
 related.oui=db:related.oui;group:malcolm;kind:termfield;friendly:Related OUI;help:Related OUI
-related.hosts=db:related.hosts;group:malcolm;kind:termfield;friendly:Related Host;help:Related Host
 related.password=db:related.password;group:malcolm;kind:termfield;friendly:Password;help:Password
+related.role=db:related.role;group:malcolm;kind:termfield;friendly:Related Role;help:Related Role
+related.segment=db:related.segment;group:malcolm;kind:termfield;friendly:Related Segment;help:Related Segment
+related.service=db:related.service;group:malcolm;kind:termfield;friendly:Related Service;help:Related Service
+related.site=db:related.site;group:malcolm;kind:termfield;friendly:Related Site;help:Related Site
 related.user=db:related.user;group:malcolm;kind:termfield;friendly:User;help:User
-related.service=db:related.service;group:malcolm:kind:termfield;friendly:Related Service;help:Related Service
-related.site=db:related.site;group:malcolm:kind:termfield;friendly:Related Site;help:Related Site
-related.segment=db:related.segment;group:malcolm:kind:termfield;friendly:Related Segment;help:Related Segment
-related.role=db:related.role;group:malcolm:kind:termfield;friendly:Related Role;help:Related Role
-related.manufacturer=db:related.manufacturer;group:malcolm:kind:termfield;friendly:Related Manufacturer;help:Related Manufacturer
-related.device_type=db:related.device_type;group:malcolm:kind:termfield;friendly:Related Device type;help:Related Device type
 source.geo.city_name=db:source.geo.city_name;group:malcolm;kind:termfield;friendly:Originating GeoIP City;help:Originating GeoIP City
 source.geo.country_name=db:source.geo.country_name;group:malcolm;kind:termfield;friendly:Originating GeoIP Country;help:Originating GeoIP Country
 source.device.cluster=db:source.device.cluster;group:malcolm;kind:termfield;friendly:Originating Device Cluster;help:Originating Device Cluster
@@ -236,7 +236,7 @@ zeek.bsap_ip_rdb.variable_count=db:zeek.bsap_ip_rdb.variable_count;group:zeek_bs
 zeek.bsap_ip_rdb.func_code=db:zeek.bsap_ip_rdb.func_code;group:zeek_bsap;kind:termfield;friendly:Application Subfunction;help:Application Subfunction
 zeek.bsap_ip_rdb.header_size=db:zeek.bsap_ip_rdb.header_size;group:zeek_bsap;kind:integer;friendly:Header Length;help:Header Length
 zeek.bsap_ip_rdb.mes_seq=db:zeek.bsap_ip_rdb.mes_seq;group:zeek_bsap;kind:integer;friendly:Message Sequence;help:Message Sequence
-zeek.bsap_ip_rdb.node_status=db:zeek.bsap_ip_rdb.node_status;group:zeek_bsap;kind:integer;friendly:Node Status;help:friendly:Node Status
+zeek.bsap_ip_rdb.node_status=db:zeek.bsap_ip_rdb.node_status;group:zeek_bsap;kind:integer;friendly:Node Status;help:Node Status
 zeek.bsap_ip_rdb.res_seq=db:zeek.bsap_ip_rdb.res_seq;group:zeek_bsap;kind:integer;friendly:Response Sequence;help:Response Sequence
 zeek.bsap_ip_rdb.sequence=db:zeek.bsap_ip_rdb.sequence;group:zeek_bsap;kind:integer;friendly:Function Sequence;help:Function Sequence
 
@@ -1237,9 +1237,9 @@ zeek.signatures.signature_id=db:zeek.signatures.signature_id;group:zeek_signatur
 zeek.signatures.sub_message=db:zeek.signatures.sub_message;group:zeek_signatures;kind:termfield;friendly:Submessage;help:Submessage
 zeek.signatures.signature_count=db:zeek.signatures.signature_count;group:zeek_signatures;kind:integer;friendly:Signatures Matched;help:Signatures Matched
 zeek.signatures.host_count=db:zeek.signatures.host_count;group:zeek_signatures;kind:integer;friendly:Host or Engine Count;help:Host or Engine Count
-zeek.signatures.hits.Capa=db:zeek.signatures.hits.Capa;group:zeek_signatures:kind:termfield;friendly:Capa Hits;help:Capa Hits
-zeek.signatures.hits.ClamAV=db:zeek.signatures.hits.ClamAV;group:zeek_signatures:kind:termfield;friendly:ClamAV Hits;help:ClamAV Hits
-zeek.signatures.hits.Yara=db:zeek.signatures.hits.Yara;group:zeek_signatures:kind:termfield;friendly:Yara Hits;help:Yara Hits
+zeek.signatures.hits.Capa=db:zeek.signatures.hits.Capa;group:zeek_signatures;kind:termfield;friendly:Capa Hits;help:Capa Hits
+zeek.signatures.hits.ClamAV=db:zeek.signatures.hits.ClamAV;group:zeek_signatures;kind:termfield;friendly:ClamAV Hits;help:ClamAV Hits
+zeek.signatures.hits.Yara=db:zeek.signatures.hits.Yara;group:zeek_signatures;kind:termfield;friendly:Yara Hits;help:Yara Hits
 
 # sip.log
 # https://docs.zeek.org/en/stable/scripts/base/protocols/sip/main.zeek.html#type-SIP::Info
